@@ -1,6 +1,5 @@
 package io.contek.invoker.okx.api.rest.user;
 
-import com.google.common.collect.ImmutableList;
 import io.contek.invoker.commons.actor.IActor;
 import io.contek.invoker.commons.actor.ratelimit.RateLimitRule;
 import io.contek.invoker.commons.actor.ratelimit.TypedPermitRequest;
@@ -13,6 +12,7 @@ import io.contek.invoker.okx.api.rest.common.ResponseWrapper;
 import javax.annotation.Nullable;
 import javax.annotation.concurrent.NotThreadSafe;
 import java.time.Duration;
+import java.util.List;
 
 import static io.contek.invoker.commons.actor.ratelimit.LimitType.API_KEY;
 import static io.contek.invoker.commons.rest.RestMethod.GET;
@@ -29,8 +29,8 @@ public final class GetAccountAccountPositionRisk
           .setResetPeriod(Duration.ofSeconds(2))
           .build();
 
-  private static final ImmutableList<TypedPermitRequest> REQUIRED_QUOTA =
-      ImmutableList.of(RATE_LIMIT_RULE.forPermits(1));
+  private static final List<TypedPermitRequest> REQUIRED_QUOTA =
+      List.of(RATE_LIMIT_RULE.forPermits(1));
 
   private String instType;
 
@@ -70,7 +70,7 @@ public final class GetAccountAccountPositionRisk
   }
 
   @Override
-  protected ImmutableList<TypedPermitRequest> getRequiredQuotas() {
+  protected List<TypedPermitRequest> getRequiredQuotas() {
     return REQUIRED_QUOTA;
   }
 
