@@ -1,6 +1,5 @@
 package io.contek.invoker.okx.api.rest.user;
 
-import com.google.common.collect.ImmutableList;
 import io.contek.invoker.commons.actor.IActor;
 import io.contek.invoker.commons.actor.ratelimit.RateLimitRule;
 import io.contek.invoker.commons.actor.ratelimit.TypedPermitRequest;
@@ -12,6 +11,7 @@ import io.contek.invoker.okx.api.rest.common.ResponseWrapper;
 
 import javax.annotation.concurrent.NotThreadSafe;
 import java.time.Duration;
+import java.util.List;
 
 import static io.contek.invoker.commons.actor.ratelimit.LimitType.API_KEY;
 import static io.contek.invoker.commons.rest.RestMethod.GET;
@@ -28,8 +28,8 @@ public final class GetAccountFeeRate extends UserRestRequest<GetAccountFeeRate.R
           .setResetPeriod(Duration.ofSeconds(2))
           .build();
 
-  private static final ImmutableList<TypedPermitRequest> REQUIRED_QUOTA =
-      ImmutableList.of(RATE_LIMIT_RULE.forPermits(1));
+  private static final List<TypedPermitRequest> REQUIRED_QUOTA =
+      List.of(RATE_LIMIT_RULE.forPermits(1));
 
   private String instType;
   private String instId;
@@ -78,7 +78,7 @@ public final class GetAccountFeeRate extends UserRestRequest<GetAccountFeeRate.R
   }
 
   @Override
-  protected ImmutableList<TypedPermitRequest> getRequiredQuotas() {
+  protected List<TypedPermitRequest> getRequiredQuotas() {
     return REQUIRED_QUOTA;
   }
 
