@@ -1,6 +1,5 @@
 package io.contek.invoker.okx.api.websocket;
 
-import com.google.common.collect.ImmutableList;
 import io.contek.invoker.commons.actor.IActor;
 import io.contek.invoker.commons.actor.ratelimit.RateLimitRule;
 import io.contek.invoker.commons.actor.ratelimit.TypedPermitRequest;
@@ -12,6 +11,7 @@ import io.contek.invoker.okx.api.websocket.common.WebSocketGeneralResponse;
 
 import javax.annotation.concurrent.ThreadSafe;
 import java.time.Duration;
+import java.util.List;
 
 import static io.contek.invoker.commons.actor.ratelimit.LimitType.IP;
 import static io.contek.invoker.okx.api.websocket.common.constants.WebSocketInboundKeys._error;
@@ -27,8 +27,8 @@ public abstract class WebSocketApi extends BaseWebSocketApi {
           .setResetPeriod(Duration.ofSeconds(1))
           .build();
 
-  private static final ImmutableList<TypedPermitRequest> REQUIRED_QUOTA =
-      ImmutableList.of(RATE_LIMIT_RULE.forPermits(1));
+  private static final List<TypedPermitRequest> REQUIRED_QUOTA =
+      List.of(RATE_LIMIT_RULE.forPermits(1));
 
   protected WebSocketApi(String name, IActor actor) {
     super(
@@ -39,7 +39,7 @@ public abstract class WebSocketApi extends BaseWebSocketApi {
   }
 
   @Override
-  protected ImmutableList<TypedPermitRequest> getRequiredQuotas() {
+  protected List<TypedPermitRequest> getRequiredQuotas() {
     return REQUIRED_QUOTA;
   }
 
